--- a/frontend/static/src/App.css
+++ b/frontend/static/src/App.css
@@ -1,3 +1,6 @@
+.body {
+  background-color: #e0e0e0;
+}
 .App {
   display: flex;
   align-items: center;
@@ -5,10 +8,63 @@
   justify-content: center;
   height: 100vh;
 }
+.button {
+  border-radius: 63px;
+  background: linear-gradient(#292727, #2f2d2d);
+  box-shadow: 5px 5px 10px #121111, 23px 23px 46px #464343;
+  border: none;
+  margin-right: 10%;
+  transition: 0.2s;
+}
+.button:hover {
+  border-radius: 63px;
+  background: linear-gradient(#292727, #2f2d2d);
+  box-shadow: 5px 5px 10px #121111, 23px 23px 46px #464343;
+  border: none;
+  transition: 0.2s;
+  transform: scale(1.1);
+}
+.modalbtn {
+  border-radius: 35px;
+  background: linear-gradient(145deg, #f0f0f0, #cacaca);
+  box-shadow: 5px 5px 10px #656565, -5px -5px 10px #ffffff;
+  border: none;
+  color: rgb(229, 70, 70);
+  transition: 0.2s;
+  padding: 6px 20px;
+}
+.modalbtn:hover {
+  color: rgb(229, 70, 70);
+  border-radius: 35px;
+  background: linear-gradient(145deg, #f0f0f0, #cacaca);
+  box-shadow: 5px 5px 10px #656565, -5px -5px 10px #ffffff;
+  transition: 0.2s;
+  transform: scale(1.1);
+}
+.bn {
+  margin-bottom: 30px;
+  border-radius: 35px;
+  background: linear-gradient(145deg, #f0f0f0, #cacaca);
+  box-shadow: 3px 3px 8px #656565, -5px -5px 10px;
+  border: none;
+  color: rgb(229, 70, 70);
+  padding: 6px 20px;
+  transition: 0.2s;
+}
+.bn:hover {
+  margin-bottom: 30px;
+  border-radius: 35px;
+  background: linear-gradient(145deg, #f0f0f0, #cacaca);
+  box-shadow: 3px 3px 8px #656565, -5px -5px 10px;
+  border: none;
+  color: rgb(229, 70, 70);
+  transition: 0.2s;
+  transform: scale(1.1);
+}
 .header {
   display: flex;
   justify-content: flex-end;
-  background-color: black;
+  background-color: #2c2a2a;
   width: 100vw;
   height: 75px;
   align-items: center;
@@ -24,7 +80,7 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 900;
   font-style: oblique;
-  text-shadow: 1px 1px white;
+  text-shadow: 1px 1px 2px white;
 }
 .subtitle {
   color: #fff;
@@ -34,19 +90,109 @@
   font-size: 14px;
   text-shadow: 0.5px 0.5px rgb(229, 70, 70);
 }
-
-.header > Button {
-  margin-right: 10%;
+.preload {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #e0e0e0;
+  height: 100vh;
 }
-.loginform {
+.loadpage {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+  margin-top: -5%;
+  border-radius: 30px;
+  background: linear-gradient(145deg, rgb(229, 70, 70), rgb(226, 91, 91));
+  box-shadow: 5px 5px 14px #747474, -3px -3px 14px #b8b8b8;
+}
+.loadpage > h2 {
+  margin-top: 30px;
+  text-shadow: 0.5px 0.5px 2px #000;
+  color: #fff;
+}
+.login {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.loginform1 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   height: 200px;
   width: 450px;
-  margin-bottom: 25%;
+  background-color: #fff;
+  border-radius: 30px;
+  box-shadow: 5px 5px 14px #848484, -28px -28px 46px #ffffff;
+  margin: 30px 0px;
+  padding: 20px 0px;
+}
+.loginform2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 300px;
+  width: 450px;
+  background-color: #fff;
+  border-radius: 30px;
+  box-shadow: 5px 5px 14px #848484, -28px -28px 46px #ffffff;
+  margin: 30px 0px;
+  padding: 20px 0px;
+}
+.input {
+  border-radius: 5px;
+  border: 1.5px solid #848484;
+  padding: 1px 2px;
+  margin: 3px 0px;
+}
+.formcontent {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 73%;
+}
+.labelwrap0 {
+  padding: 0px 10px;
 }
 .labelwrap {
-  margin-right: 10px;
+  margin-left: 25px;
+}
+.labelwrap2 {
+  margin-left: 40px;
+}
+.labelwrap3 {
+  margin-left: 25px;
+}
+footer {
+  width: 86%;
+  height: 75px;
+  border-top: 1px solid #a4a2a2;
+  margin-left: 90px;
+  display: flex;
+  align-items: center;
+}
+.copywrite {
+  color: #8d949d;
+  font-size: 12px;
+}
+.copywrite > div {
+  display: flex;
+  align-items: center;
+  margin-left: 90px;
+}
+.footer-link-list {
+  display: flex;
+  margin: 0;
+  list-style: none;
+  font-size: 12px;
+}
+.footer-links {
+  margin: 0 18px;
+  color: rgb(229, 70, 70);
+  text-decoration: none;
 }
