--- a/frontend/static/src/App.css
+++ b/frontend/static/src/App.css
@@ -187,16 +187,16 @@
   margin-left: 25px;
 }
 footer {
-  width: 86%;
   height: 75px;
-  border-top: 1px solid #a4a2a2;
-  margin-left: 90px;
   display: flex;
   align-items: center;
+  background-color: #f0f0f0;
+  box-shadow: -7px -7px 15px #c2c2c2;
 }
 .copywrite {
   color: #8d949d;
   font-size: 12px;
+  margin-left: 90px;
 }
 .copywrite > div {
   display: flex;
@@ -213,4 +213,85 @@ footer {
   margin: 0 18px;
   color: rgb(229, 70, 70);
   text-decoration: none;
+}
+.chatapp {
+  display: flex;
+}
+.aside {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 30%;
+  background-color: #f0f0f0;
+  box-shadow: 7px 7px 15px #c2c2c2;
+}
+.message-box {
+  width: 400px;
+}
+.chatroomstitle {
+  margin-top: 50px;
+  font-size: 50px;
+  text-shadow: 2px 2px 3px white;
+}
+.roombtnlist {
+  display: flex;
+  flex-direction: column;
+  margin: 40px 0px;
+}
+.roombtn {
+  border-radius: 10px;
+  background: linear-gradient(145deg, #f0f0f0, #cacaca);
+  box-shadow: 5px 5px 10px #656565, -5px -5px 10px #ffffff;
+  border: none;
+  color: rgb(229, 70, 70);
+  transition: 0.2s;
+  padding: 6px 20px;
+  font-weight: 500;
+  font-size: 12px;
+  margin: 10px 0px;
+}
+.roomtitle {
+  font-size: 25px;
+}
+.submitbutton {
+  border-radius: 10px;
+  background: linear-gradient(145deg, rgb(229, 70, 70), rgb(234, 90, 90));
+  box-shadow: 5px 5px 10px #656565, -5px -5px 10px #ffffff;
+  border: none;
+  color: #fff;
+  transition: 0.2s;
+  padding: 5px 16px;
+  font-weight: 500;
+}
+.submitbutton:hover {
+  border-radius: 10px;
+  background: linear-gradient(145deg, rgb(229, 70, 70), rgb(234, 90, 90));
+  box-shadow: 5px 5px 10px #656565, -5px -5px 10px #ffffff;
+  border: none;
+  transition: 0.1s;
+  transform: scale(1.1);
+  font-weight: 500;
+}
+.roomsubmit {
+  display: flex;
+  margin-top: 20px;
+}
+.input {
+  font-size: 16px;
+  width: 175px;
+  margin-right: 15px;
+}
+.mainmessages {
+  width: 70%;
+}
+.messagingapp {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+.messagelist {
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: center;
+  align-items: center;
 }
