--- a/frontend/static/src/App.css
+++ b/frontend/static/src/App.css
@@ -162,12 +162,6 @@
   margin: 30px 0px;
   padding: 20px 0px;
 }
-.input {
-  border-radius: 5px;
-  border: 1.5px solid #848484;
-  padding: 1px 2px;
-  margin: 3px 0px;
-}
 .formcontent {
   display: flex;
   justify-content: space-between;
@@ -225,13 +219,11 @@ footer {
   background-color: #f0f0f0;
   box-shadow: 7px 7px 15px #c2c2c2;
 }
-.message-box {
-  width: 400px;
-}
 .chatroomstitle {
   margin-top: 50px;
   font-size: 50px;
   text-shadow: 2px 2px 3px white;
+  font-family: "Encode Sans", sans-serif;
 }
 .roombtnlist {
   display: flex;
@@ -247,7 +239,7 @@ footer {
   transition: 0.2s;
   padding: 6px 20px;
   font-weight: 500;
-  font-size: 12px;
+  font-size: 24px;
   margin: 10px 0px;
 }
 .roomtitle {
@@ -284,14 +276,46 @@ footer {
 .mainmessages {
   width: 70%;
 }
+.messagesroomtitle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 50px 0px;
+  font-family: "Encode Sans", sans-serif;
+}
 .messagingapp {
   display: flex;
   justify-content: center;
-  width: 100%;
+  flex-direction: column;
+  left: 50%;
 }
 .messagelist {
   display: flex;
   flex-direction: column-reverse;
   justify-content: center;
   align-items: center;
+}
+.messagetextbox {
+  display: flex;
+  left: 50%;
+  margin: 40px 0px;
+}
+.messageinput {
+  width: 40%;
+  margin-left: 30%;
+  margin-right: 20px;
+}
+.messagesubmitbutton {
+}
+.message-box {
+  width: 400px;
+  background: #f0f0f0;
+  box-shadow: 7px 7px 11px #b4b4b4;
+  margin: 5px 0px;
+}
+.messageheader {
+  background-color: rgba(229, 70, 70, 0.59);
+}
+.messagebody {
+  height: 50px;
 }
